--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@chenfengyuan/vue-carousel": "^1.0.5",
+    "@glidejs/glide": "^3.4.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-owl-carousel": "^2.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
